update: done final 1

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
-<div style="margin-top: 10rem" class="container">
+<div style="margin-top: 2rem" class="container position-relative">
   <router-outlet></router-outlet>
+  <app-compare-product></app-compare-product>
 </div>
 <app-footer></app-footer>
-<app-compare-product></app-compare-product>
+
