--- a/src/app/views/cart/cart.component.html
+++ b/src/app/views/cart/cart.component.html
@@ -8,9 +8,9 @@
   <i class="bi bi-cart"></i>
   <span
     class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
-    *ngIf="cartService.productList.length"
+    *ngIf="getChosedProductList().length"
   >
-    {{ cartService.productList.length }}
+    {{ getChosedProductList().length }}
   </span>
 </button>
 
@@ -31,31 +31,104 @@
   </div>
   <div class="offcanvas-body">
     <div>
-      <div>
-        <!-- ngfor  -->
+      <div class="d-flex flex-column gap-2">
         <div
-          class="product-row"
-          *ngFor="let product of cartService.productList"
+          *ngFor="let product of getChosedProductList()"
+          class="card mb-3 border border-primary"
         >
-          <img class="cart-image" src="" alt="" />
-          <span class="cart-price">{{ product.price }}$</span>
-          {{ product.amount | json }}
-          <input
-            class="product-quantity"
-            type="number"
-            [(ngModel)]="product.amount"
-          />
-          <button class="remove-btn" (click)="removeProduct(product.id)">
-            Xoa
-          </button>
+          <div class="row g-0">
+            <div class="col-md-4">
+              <div
+                style="
+                  width: 100%;
+                  aspect-ratio: 5/6;
+                  max-width: 10rem;
+                  margin: auto;
+                "
+              >
+                <img
+                  [src]="product?.image"
+                  class="img-fluid rounded-start"
+                  style="width: 100%; height: 100%; object-fit: contain"
+                  alt="..."
+                />
+              </div>
+            </div>
+            <div class="col-md-8">
+              <div class="card-body h-100 d-flex flex-column">
+                <div
+                  class="d-flex justify-content-between align-items-start flex-nowrap"
+                  style="flex: 1"
+                >
+                  <h5 class="card-title">{{ product?.name }}</h5>
+                  <button
+                    class="btn btn-danger"
+                    (click)="removeProduct(product.id)"
+                  >
+                    <i class="bi bi-x-lg"></i>
+                  </button>
+                </div>
+
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="d-flex gap-2 align-items-center">
+                    <div
+                      class="input-group flex-nowrap align-items-center"
+                      style="width: 5rem; flex: 1"
+                    >
+                      <input
+                        type="number"
+                        class="form-control"
+                        aria-label="Username"
+                        aria-describedby="addon-wrapping"
+                        [(ngModel)]="product.amount"
+                      />
+                    </div>
+                    <span class="ms-2">Bó</span>
+                  </div>
+
+                  <small class="text-body-secondary"
+                    >${{
+                      product.price * product.amount | number : "1.0-3"
+                    }}</small
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
-      <div class="total">
-        <h1 class="cart-total">TOTAL</h1>
-        <span class="total-price">{{ totalPrice() }}$</span>
-        <button class="purchase-btn">PURCHASE</button>
+      <div class="card mb-3 p-2" style="max-width: 540px" *ngIf="totalPrice()">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <div class="d-flex align-items-center w-100 h-100">
+              <h5 class="card-title ms-2">Total</h5>
+            </div>
+          </div>
+          <div class="col-md-8">
+            <div
+              class="card-body d-flex justify-content-between align-items-center"
+            >
+              <div class="fw-bold text-info">
+                {{ totalAmout() | number : "1.0-3" }}
+                <span class="ms-2">Bó</span>
+              </div>
+              <div class="fw-bold text-danger">
+                ${{ totalPrice() | number : "1.0-3" }}
+              </div>
+            </div>
+          </div>
+          <div class="col-12 p-2">
+            <button class="btn btn-success w-100" (click)="buy()">Mua</button>
+          </div>
+        </div>
       </div>
+
+      <!-- <div class="total">
+        <h1 class="cart-total">TOTAL</h1>
+        
+        <button class="purchase-btn">PURCHASE</button>
+      </div> -->
     </div>
   </div>
 </div>
