--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -18,7 +18,7 @@
 
   <div class="row mt-5">
     <div
-      class="col-2 text-center"
+      class="col-6 col-md-2 text-center"
       style="cursor: pointer"
       *ngFor="let occasion of occasionService.occasionList; let i = index"
       (click)="onClickOccasion(occasion)"
@@ -42,18 +42,30 @@
       <div class="heading">
         <h3>HOT PRODUCTS</h3>
       </div>
-      <div class="row g-4">
+      <div class="row g-2">
         <div
           *ngFor="let product of hotProductList; let i = index"
-          class="col-3"
+          class="col-12 col-md-6 col-lg-3"
         >
-          <div *ngIf="i < 8" class="h-100">
-            <div class="card h-100">
-              <img
-                src="/assets/An Dau-278x278.jpg"
-                class="card-img-top"
-                alt="..."
-              />
+          <div
+            class="card p-1"
+            [ngClass]="{
+              'border border-3 border-warning shadow': product?.isCompared
+            }"
+          >
+            <div
+              [ngClass]="{
+                'border border-3 border-primary rounded-2': product?.isChosed
+              }"
+            >
+              <div style="width: 100%; aspect-ratio: 5/6" class="border-bottom">
+                <img
+                  [src]="product?.image"
+                  class="card-img-top"
+                  style="width: 100%; height: 100%; object-fit: contain"
+                  alt="..."
+                />
+              </div>
               <div class="card-body d-flex flex-column">
                 <h5 class="card-title">{{ product?.name }}</h5>
                 <p class="card-text" style="flex: 1">{{ product?.detail }}</p>
@@ -94,18 +106,30 @@
       <div class="heading">
         <h3>NEWS</h3>
       </div>
-      <div class="row g-4">
+      <div class="row g-1">
         <div
           *ngFor="let product of newProductList; let i = index"
-          class="col-3"
+          class="col-12 col-md-6 col-lg-3"
         >
-          <div *ngIf="i < 8" class="h-100">
-            <div class="card h-100">
-              <img
-                src="/assets/An Dau-278x278.jpg"
-                class="card-img-top"
-                alt="..."
-              />
+          <div
+            class="card p-1"
+            [ngClass]="{
+              'border border-3 border-warning shadow': product?.isCompared
+            }"
+          >
+            <div
+              [ngClass]="{
+                'border border-3 border-primary rounded-2': product?.isChosed
+              }"
+            >
+              <div style="width: 100%; aspect-ratio: 5/6" class="border-bottom">
+                <img
+                  [src]="product?.image"
+                  class="card-img-top"
+                  style="width: 100%; height: 100%; object-fit: contain"
+                  alt="..."
+                />
+              </div>
               <div class="card-body d-flex flex-column">
                 <h5 class="card-title">{{ product?.name }}</h5>
                 <p class="card-text" style="flex: 1">{{ product?.detail }}</p>
@@ -143,7 +167,7 @@
 
     <!-- SOLOGAN SHOP FLOWER -->
     <div class="row mt-5">
-      <div class="col-4 text-center">
+      <div class="col-12 col-md-4 text-center">
         <img src="/assets/Slogan1.png" alt="" />
         <div class="giao-nhanh">FREE SHIPPING</div>
         <p class="document-free-shipping">
@@ -153,7 +177,7 @@
         </p>
       </div>
 
-      <div class="col-4 text-center">
+      <div class="col-12 col-md-4 text-center">
         <img src="/assets/Slogan2.png" alt="" />
         <div class="giao-nhanh">GIAO NHANH TRONG 90 PHÚT</div>
         <p class="document-giao-nhanh">
@@ -162,7 +186,7 @@
         </p>
       </div>
 
-      <div class="col-4 text-center">
+      <div class="col-12 col-md-4 text-center">
         <img src="/assets/Slogan3.png" alt="" />
         <div class="hoa-dep-nhu-hinh">HOA ĐẸP NHƯ HÌNH</div>
         <p class="document-hoa-dep-nhu-hinh">
