--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap-icons/font/bootstrap-icons.css";
+
+.required::after {
+  content: ' *';
+  color: red;
+}
+
+
