--- a/src/app/views/products-detail/products-detail.component.html
+++ b/src/app/views/products-detail/products-detail.component.html
@@ -16,13 +16,13 @@
   </div>
   <div class="col-8">
     <div class="fs-1 fw-bold text-primary">{{ product?.name }}</div>
-    <div class="fs-5 fw-bold text-danger">Giá: ${{ product?.price }}</div>
-    <i class="fw-bold"
+    <div class="fs-5 fw-bold text-danger">Price: ${{ product?.price }}</div>
+    <!-- <i class="fw-bold"
       >Giá đã bao gồm 10% VAT - Sản phẩm chưa bao gồm phí giao tân nơi (Chi
       tiết)</i
-    >
+    > -->
     <div class="mt-1">
-      <button (click)="addToCart(product)" class="btn btn-primary">
+      <button (click)="addToCart(product)" class="btn btn-warning">
         Add to cart
       </button>
     </div>
@@ -51,7 +51,13 @@
     <div class="d-flex justify-content-between align-items-center">
       <div class="d-flex gap-2">
         <a class="btn btn-success" href="tel:1800 6789">1800 6789</a>
+
+        <a [href]="product?.doc" download>
+          <button class="btn btn-primary me-2">
+            <i class="bi bi-download"></i></button
+        ></a>
       </div>
+
       <div class="form-check form-switch">
         <input
           class="form-check-input"
