update: set offline boostrap lib and test build

--- a/src/app/views/about/about.component.html
+++ b/src/app/views/about/about.component.html
@@ -10,7 +10,15 @@
         <img src="assets/logo.png" alt="" style="height: 7rem" />
         <!-- <span class="fs-4"></span> -->
       </a>
-      <div class="fw-bold mt-3">bloom@gmail.com</div>
+      <div class="fw-bold mt-3 pt-2">
+        <a
+          class="text-black"
+          href="mailto:bloom@gmail.com"
+          style="text-decoration: none"
+          >bloom@gmail.com</a
+        >
+      </div>
+
       <div class="fw-bold mt-2">facebook.bloom.com</div>
       <div class="fw-bold mt-2">225 Nguyen Dinh Chieu, Ho Chi Minh City</div>
       <!-- <div class="d-flex gap-2">
