--- a/src/app/views/sign-in/sign-in.component.html
+++ b/src/app/views/sign-in/sign-in.component.html
@@ -88,8 +88,8 @@
             >
               Submit
             </button>
-            <span class="text-danger fw-bold">{{ error }}</span>
-            <span class="text-success fw-bold">{{ success }}</span>
+            <!-- <span class="text-danger fw-bold">{{ error }}</span>
+            <span class="text-success fw-bold">{{ success }}</span> -->
           </div>
         </form>
       </div>
